# Optimus

./: .coralrc  .dockerignore  .env  .env.example  .gitignore  AGENT_PERFORMANCE_REVIEW.md  AGENT_TRACKING.md  ASSISTANT_FRAMEWORK_RESEARCH.md  BACKEND_SETUP.md  CLAUDE.md  COUNCIL_INTEGRATION_COMPLETE.md  DATABASE_OPTIMIZATION_SUMMARY.md  DEVELOPMENT_SUMMARY.md  Dockerfile  ELEVENLABS_QUICKSTART.md  FINAL_SYSTEM_STATUS.md  FINAL_TESTING_PROOF.md  FINAL_TEST_REVIEW.md  IPHONE_APP_PLAN.md  JARVIS_PROGRESS.md  KNOWLEDGE_GRAPH_IMPLEMENTATION.md  MISSING_FEATURES.md  Makefile  NEXT_STEPS.md  OPTIMUS_DEVELOPMENT_PLAN.md  OPTIMUS_VOICE_SETUP.md  PHASE_2_DELIVERABLES.md  PHASE_2_PLAN.md  PROJECT_VISION.md  README.md  REQUIREMENTS_AND_EXECUTION_PLAN.md  SMART_TROUBLESHOOTING_ENGINE_SUMMARY.md  SPRINT_PLAN_CORAL_AGENTS.md  SPRINT_STATUS_DAY2.md  SYSTEM_VERIFICATION.md  TESTING_REVIEW.md  TEST_RESULTS.md  TOOL_INTEGRATION_SUMMARY.md  UI_PREVIEW.md  VOICE_AGENT_SETUP.md  (+40 more)
.coral/: claude_code_agents.json  standalone_config.json
docs/: TECHNICAL_ARCHITECTURE.md  TESTING.md  TOOL_INTEGRATION.md
examples/: tool_integration_demo.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  ORCHESTRATION_DASHBOARD.md  README.md  dev-setup.md  index.html  optimus-prime-voice.html  orchestration-dashboard.html  package.json  simple-dashboard.html  tailwind.config.js  tsconfig.json  vite.config.ts  voice-interface.html
iOS/: E2E_TEST_CHECKLIST.md  E2E_TEST_RESULTS.md  OPTIMUS_IOS_ARCHITECTURE.md  OPTIMUS_UX_IMPROVEMENT_PLAN.md  XCODE_SETUP.md
k8s/: ingress.yaml
scripts/: backup.sh  setup.sh  (+2 more)
(+252 files in other folders)
